# pelican-i18n-subsites

./: .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  i18n_subsites.py  pyproject.toml  tasks.py
.github/workflows/: main.yml
pelican/plugins/i18n_subsites/: __init__.py  i18n_subsites.py  test_i18n_subsites.py
pelican/plugins/i18n_subsites/test_data/: pelicanconf.py
pelican/plugins/i18n_subsites/test_data/content/: translated_article-cz.rst  translated_article-de.rst  translated_article-en.rst
