[tool.poetry]
name = "pelican-i18n-subsites"
version = "0.10.0"
description = "Pelican plugin to create internationalized sub-sites"
authors = [
    "Ondrej Grover <ondrej.grover@gmail.com>",
    "Poren Chiang <poren@poren.tw>",
]
license = "AGPL-3.0"
readme = "README.rst"
keywords = ["i18n", "pelican", "plugin"]
repository = "https://github.com/pelican-plugins/i18n-subsites"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/pelican-plugins/i18n-subsites/issues"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pelican = ">=4.5"
markdown = {version = ">=3.2", optional = true}

[tool.poetry.dev-dependencies]
black = "^23"
flake8 = "^6.0"
flake8-black = "^0.3"
invoke = "^2.1"
isort = "^5.12"
livereload = "^2.6"
markdown = "^3.4"
pytest = "^7.3"
pytest-cov = "^4.0"
pytest-pythonpath = "^0.7"
pytest-sugar = "^0.9"
Werkzeug = "^2.3"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "I18n Subsites"
git-username = "botpub"
git-email = "botpub@autopub.rocks"
append-github-contributor = true

[tool.isort]
# Maintain compatibility with Black
profile = "black"
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" as separate import section
known_pelican = "pelican"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
